boulder/tests/compile_fail/attr/lang_item.bo
# div8
# more than once
# (5:

@lang_item(div8)
fn liar(a: u8, b: u8) -> u8 {
    a + b
}